Changelog 0.7.1.1
-----------------
[SA-00434] MediaPlayer: "add all" from the explorer doesn't not sort the files alphanumeric - so they end up totally mixed in the playlist
[SA-00432] Sally: add Desktop shortcut to the CFileBrowser
[SA-00433] MediaPlayer: explorer already remembers the last folder the explorer was in - should also remember the folder depth


Changelog 0.7.0.6
-----------------
[SA-00430] SallyTools: the update process can not unzip the file and the installation gets corrupt
[NO-TICKET] APPCOMMAND_MEDIA_REWIND and APPCOMMAND_MEDIA_FAST_FORWARD was not forwarded to the application
[SA-00431] MediaPlayer: Album Browser: Popup is not working correct


Changelog 0.7.0.5
-----------------
[SA-00425] Sally: empty logfile on startup if it is to big (for beta users)
[SA-00423] ImageBrowser: "zoom" screensaver mode: the images jumps sometimes
[SA-00428] ImageBrowser: pause / play is not working in the screensaver mode
[SA-00427] Sally: (multimedia) keyboard keys should be handled by sally, even when sally don't have the focus (can be turned on / off in the settings)


Changelog 0.7.0.3
-----------------
[SA-00421] SallyAPI: where possible CPopUp windows should react on a click to the lightbox
+ CAbout
+ CAlarmPopUp
+ CFacebookConfig
[NO-TICKET] SallyAPI: extended the CAmazonInfo DVD result
[SA-00422] SallyAPI: the FileHelper returns not the correct local time
[SA-00199] MediaPlayer: automatic playlist history - EXT
+ You can select if the current playlist is replaced or the new is attached to the current. This setting is restored after restart.
+ Problem with getting the correct album names
+ Restoring selected playlist after restart


Changelog 0.7.0.2
-----------------
[NO-TICKET] SallyAPI: fixed some minor issues with the CFileBrowser class
[SA-00416] MediaPlayer: "info" feld layout
[NO-TICKET] MediaPlayer: Crash while cleaning up
[SA-00418] MediaPlayer: id3 tag - edit tags if no tag is present is not working


Changelog 0.7.0.1
-----------------